# python-project-boilerplate

./: .env.dev  .gitignore  Dockerfile  mypy.ini  pyproject.toml  ruff.toml
