[tool.poetry]
name = "boiler-plate-app"
version = "0.1.0"
description = ""
authors = ["macwdo <danilo.macedofernandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]

lint_check = "ruff check"
lint_format = "ruff format & ruff check --fix"
lint_unsafe = "ruff format & ruff check --unsafe-fixes --fix"

test = "coverage run -m pytest"
post_test = "coverage html"

type_check = "mypy ."
type_check_strict = "mypy . --strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
